--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,7 @@
    or page.title == "Blog"
    or page.title == "Projects"
    or page.title == "Resume"
+   or page.title == "Gallery"
    or page.title == "Tags"
 %}{% assign showHeader = true %}{% endif %}
 
