--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -5,6 +5,7 @@
 @import "base/general";
 @import "base/helpers";
 
+@import "pages/gallery";
 @import "pages/home-blog-projects";
 @import "pages/page";
 @import "pages/post";
