--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -92,6 +92,18 @@ figure.highlight
 	width: 100%
 	margin: 0
 
+table
+	font-size: 12px
+	font-family: $fontMonospace
+	display: block
+	overflow-x: auto
+	white-space: nowrap
+	border-collapse: collapse
+
+th, td
+	padding: 7px
+	border: 2px solid
+
 code
 	padding: 2px 3px
 	font-family: $fontMonospace
